<resources>
    <string name="app_name">lab02</string>
    <string name="bmi">BMI</string>
    <string name="todo">TODO</string>
    <string name="clear">clear</string>
    <string name="calculate">calculate</string>
    <string name="heading">heading</string>
    <string name="bmichart">bmichart</string>
    <string name="underarrow">underArrow</string>
    <string name="overarrow">overArrow</string>
    <string name="normalarrow">normalArrow</string>
    <string name="obesearrow">obeseArrow</string>
    <string name="exobesearrow">exObeseArrow</string>
    <string name="enter_weight_in_kg_s_20_200">enter weight in KG\'s(20-200)</string>
    <string name="enter_height_cm_s_80_300">enter height cm\'s(80-300)</string>
    <string name="bmiheading">bmiHeading</string>
</resources>