<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom|clip_horizontal|clip_vertical"
    tools:context=".calculation">


    <ImageView
        android:id="@+id/imageView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bmiheading"
        android:contentDescription="@string/heading" />

    <ImageView
        android:id="@+id/bmiChart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/bmichart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/bmisection" />

    <TextView
        android:id="@+id/CBMI"
        android:layout_width="118dp"
        android:layout_height="74dp"
        android:text="@string/bmi"
        app:layout_constraintBottom_toTopOf="@+id/bmiChart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.157" />

    <ImageView
        android:id="@+id/bmiUnder"
        android:layout_width="77dp"
        android:layout_height="77dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/bmiChart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CBMI"
        android:contentDescription="@string/underarrow" />

    <ImageView
        android:id="@+id/bmiOver"
        android:layout_width="77dp"
        android:layout_height="77dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/bmiChart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CBMI"
        android:contentDescription="@string/overarrow" />


    <ImageView
        android:id="@+id/bmiNormal"
        android:layout_width="77dp"
        android:layout_height="77dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/bmiChart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CBMI"
        android:contentDescription="@string/normalarrow" />

    <ImageView
        android:id="@+id/bmiObese"
        android:layout_width="77dp"
        android:layout_height="77dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/bmiChart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.718"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CBMI"
        android:contentDescription="@string/obesearrow" />

    <ImageView
        android:id="@+id/bmiExObese"
        android:layout_width="77dp"
        android:layout_height="77dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/bmiChart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.979"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CBMI"
        android:contentDescription="@string/exobesearrow" />


</androidx.constraintlayout.widget.ConstraintLayout>